--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
     <head>
         <title>Redux Dev Tools</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
     </head>
     <body>
         <div id="app"></div>
-        <script src="node_modules/react/dist/react.js"></script>
-        <script src="node_modules/react/dist/react-dom.js"></script>
+        <script src="react/dist/react.min.js"></script>
+        <script src="react/dist/react-dom.min.js"></script>
         <script src="bundle.js"></script>
     </body>
 </html>
